fixed overflow issues

--- a/root/css/main.css
+++ b/root/css/main.css
@@ -21,7 +21,7 @@ body {
           box-sizing: border-box;
   color: #f7f1e3;
   height: 100vh;
-  overflow: hidden;
+  overflow-x: hidden;
 }
 
 body {
