--- a/root/sass/base/_reset.scss
+++ b/root/sass/base/_reset.scss
@@ -19,5 +19,5 @@ body {
     box-sizing: border-box;
     color: $color-neutral-1;
     height: 100vh;
-    overflow: hidden;
+    overflow-x: hidden;
 }
